# country

./: .gitignore  CMakeLists.txt
common/inc/: common.h
dpu/: CMakeLists.txt
dpu/inc/: dout.h  edit_distance.h  mram_counters.h  odpd.h
dpu/src/: dout.c  edit_distance.c  mram_counters.c  odpd.c  task.c
host/: CMakeLists.txt
host/inc/: ococo_counters.h  upvc.h  wfa2_wrapper.h
host/src/: ococo_counters.c  processread.c  upvc.c  wfa2_wrapper.c
tests/: CMakeLists.txt  generate_and_test_all_chr.bash  simchr.bash  simchr_mono.bash
